--- a/index.html
+++ b/index.html
@@ -113,9 +113,45 @@
             <div class="feature-image">
                 <img src="images/architect.png" alt="">
             </div>
+        </section>
+
+        <section class="some">
+            <div class="some-facts">
+                <h3>Some Facts</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+        </section>
+
+        <section class="point">
+            <div class="point-table">
+
+                <div class="point-mark">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+
+                <div class="point-mark">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+
+                <div class="point-mark">
+                    <img src="images/icons/email.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+
+                <div class="point-mark">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
 
 
-            
+            </div>
+
 
         </section>
 
