--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="super">
-                    <h3>Awesome Modern Design</h3>
+                    <h3>Super Easy to Edit</h3>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
@@ -113,6 +113,10 @@
             <div class="feature-image">
                 <img src="images/architect.png" alt="">
             </div>
+            <div id="exprince-btn">
+                <button><samp id="year">10+Years</samp> <br> <samp id="exprince">Experience</samp> </button>
+            </div>
+       
         </section>
 
         <section class="some">
@@ -132,28 +136,61 @@
                 </div>
 
                 <div class="point-mark">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
+                </div>
+
+                <div class="point-mark">
                     <img src="images/icons/customers.png" alt="">
-                    <h3>54</h3>
-                    <p>Awards Winnings</p>
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
                 </div>
 
                 <div class="point-mark">
                     <img src="images/icons/email.png" alt="">
-                    <h3>54</h3>
-                    <p>Awards Winnings</p>
+                    <h3>22578</h3>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="our-sponsports">
+                <h3>Our Sponspors</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="brand-icone">
+                
+                <div class="icone">
+                    <img src="images/sponsors/spotify.png" alt="">
                 </div>
 
-                <div class="point-mark">
-                    <img src="images/icons/projects.png" alt="">
-                    <h3>54</h3>
-                    <p>Awards Winnings</p>
+                <div class="icone">
+                    <img src="images/sponsors/amazon.png" alt="">
                 </div>
 
+                <div class="icone">
+                    <img src="images/sponsors/google.png" alt="">
+                </div>
+
+                <div class="icone">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+
+                <div class="icone">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
 
             </div>
 
+            <div class="last">
+                <p>All rights reserved copyright@2023 startup landing page design</p>
+            </div>
 
-        </section>
+
+        </footer>
 
 
 
