--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 <body>
     <!-- Header start -->
     <header>
+
+          <!-- for small divises -->
+
+            <!-- <label for="cars">Choose a car:</label> -->
+
+    <select name="nav" id="menu">
+        <option value="home">|||</option>
+        <option value="home">Home</option>
+        <option value="about">About</option>
+        <option value="contact-us">Contact Us</option>
+        <option value="login">Login</option>
+        </select>
+        <!-- End for small divises -->
         <div class="top-class">
             <div class="G3-Architects"><h1>G3 Architects</h1></div>
             <div class="menu">
@@ -20,7 +33,12 @@
                 <a href="">Login</a>
             </div>
         </div>
-        <!-- for small divise -->
+      
+
+
+
+
+
     </header>  
     <!-- header end   -->
 
