--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <!-- <label for="cars">Choose a car:</label> -->
 
-    <select name="nav" id="menu">
+    <select name="nav" id="menu" class="menu-class">
         <option value="home">|||</option>
         <option value="home">Home</option>
         <option value="about">About</option>
